style.css
/*  colors */
:root{
    --pastelPink: #f8c4cc;
    --gold: #ffcf28;
    --gGreen: #57886C;
    --duskGreen: #466060;
    --darkGreen: #0E0F19;
    --smoothFont: 'Josefin Sans', sans-serif;
    --sun_gifpos: 200px;
}
html{
    scroll-behavior: smooth;
    scrollbar-width: none;
    overscroll-behavior: contain;
}
html:-webkit-scrollbar{
    scrollbar-width: none;
}

/*
 ██████╗██╗      █████╗ ███████╗███████╗███████╗███████╗    ███████╗███████╗ ██████╗████████╗██╗ ██████╗ ███╗   ██╗
██╔════╝██║     ██╔══██╗██╔════╝██╔════╝██╔════╝██╔════╝    ██╔════╝██╔════╝██╔════╝╚══██╔══╝██║██╔═══██╗████╗  ██║
██║     ██║     ███████║███████╗███████╗█████╗  ███████╗    ███████╗█████╗  ██║        ██║   ██║██║   ██║██╔██╗ ██║
██║     ██║     ██╔══██║╚════██║╚════██║██╔══╝  ╚════██║    ╚════██║██╔══╝  ██║        ██║   ██║██║   ██║██║╚██╗██║
╚██████╗███████╗██║  ██║███████║███████║███████╗███████║    ███████║███████╗╚██████╗   ██║   ██║╚██████╔╝██║ ╚████║
 ╚═════╝╚══════╝╚═╝  ╚═╝╚══════╝╚══════╝╚══════╝╚══════╝    ╚══════╝╚══════╝ ╚═════╝   ╚═╝   ╚═╝ ╚═════╝ ╚═╝  ╚═══╝

*/

/* home page steve falling animation on start */
.steveFall{
    height: auto;
    width: 70px;
    transform: translate(0px, -1000px);
    opacity: 0;
    float: right;
    justify-self: center;
    transition: transform 5s, opacity 1s;
}

.steveFallAnimation{
    transform: translate(0px, 0px);
    opacity: 1;
}

/* making images responsive */

.responsiveImage{
    width: 100%;
    max-width: inherit;
    height: auto;
    position: absolute;
}

.flex{
    display: flex;
    justify-content: center;
    align-items: center;
}

/* text custmization */

.text-center{
    text-align: center;
}

.text-large{
    font-size: 2em;
}

.text-nodecor{
    text-decoration: none;
}

.text-color-white{
    color: white;
}

.text-invert{
    color: var(--darkGreen);
}

.text-bold{
    font-weight: bolder;
}

/* MENU HAMBURGER OPEN */

.mnu-btn{
    position: absolute;
    display: flex;
    top: 0px;
    right: 0px;
    height: 50px;
    width: 50px;
    background-color: var(--gold);
    z-index: 5;
    border: 0px solid transparent;
    flex-direction: column;
    gap: 5px;
    align-self: center;
    justify-content: center;
    cursor: pointer;
    transition: translate 1s, opacity 1s, background-color 1s;
    
}

.mnu-btn .ham-top{
    transition: translate 1s, rotate 1s;
    width: 40px;
    height: 5px;
    background-color: black;
    transform: translate(0px, 0px);
}
.mnu-btn .ham-middle{
    transition: translate 1s, rotate 1s;
    width: 40px;
    height: 5px;
    background-color: black;
}
.mnu-btn .ham-bottom{
    transition: translate 1s, rotate 1s;
    width: 40px;
    height: 5px;
    background-color: black;
    transform: translate(0px, 0px);
}

.mnu-btn-close{
    background-color: red;
    position: absolute;
    display: flex;
    top: 0px;
    right: 0px;
    height: 50px;
    width: 50px;
    z-index: 5;
    border: 0px solid transparent;
    flex-direction: column;
    gap: 5px;
    align-self: center;
    justify-content: center;
    cursor: pointer;
    transition: translate 1s, opacity 1s, background-color 1s;
}
.mnu-btn-close .ham-top{
    transition: transform 1s;
    width: 40px;
    height: 5px;
    background-color: black;
    transform: translateY(6px) rotate(45deg);
}
.mnu-btn-close .ham-middle{
    transition: transform 1s;
    width: 40px;
    height: 5px;
    background-color: black;
    opacity: 0;
}
.mnu-btn-close .ham-bottom{
    transition: transform 1s;
    width: 40px;
    height: 5px;
    background-color: black;
    transform: translateY(-15px) rotate(135deg);
}


/* END */

.pos-center-absolute{
    position: absolute;
    bottom: 50px;
}

.open{
    position: absolute;
    right: 0;
    background-color: var(--darkGreen);
    margin-top: 0px;
    margin-bottom: 10px;
    width: 100%;
    height: 100%;
    opacity: 1;
    border: 0px solid  transparent;
    border-radius: 50px;
    transition: all 1s;
    z-index: 4;
}

.close{
    position: absolute;
    right: 0;
    background-color: var(--darkGreen);
    margin-top: 0px;
    margin-bottom: 10px;
    width: 50px;
    height: 50px;
    opacity: 0;
    border: 0px solid  transparent;
    border-radius: 0px;
    transition: all 1s;
    z-index: 4;
}

.center-nav-label{
    position: relative;
    margin: auto;
    height: 50%;
    left: 50%;
    color: white;
    text-align: center;
}

.bottom-border-curved{
    border-bottom: 3px solid var(--gold);
    border-radius: 0 0 10px 10px;
}

.shape-square{
    width: 100px;
    height: 100px;
    background: linear-gradient(to top, black, white);
}

.ul-nodecor{
    list-style-type: none;
}
.no_padding{
    padding: 0;
}
.no_margin{
    margin: 0;
}

.scroll-snap{
    scroll-snap-type: y mandatory;

}
.scroll-snap > * {
    scroll-snap-align: start;
}

.fill{
    height: 100%;
    width: 100%;
}
.fill-33per{
    height: 33%;
    width: 33%;
}
.fill-67per{
    height: 67%;
    width: 67%;
}

.asp-rat1_1{
    aspect-ratio: 1 / 1;
}

.socialMedias a{
    text-decoration: none;
}
.socialMedias a img{
    max-width: 25px;
    width: 25px;
    max-height: 25px;
    height: 25px;
}

/*
███████╗███████╗██╗     ███████╗ ██████╗████████╗ ██████╗ ██████╗     ███████╗███████╗ ██████╗████████╗██╗ ██████╗ ███╗   ██╗
██╔════╝██╔════╝██║     ██╔════╝██╔════╝╚══██╔══╝██╔═══██╗██╔══██╗    ██╔════╝██╔════╝██╔════╝╚══██╔══╝██║██╔═══██╗████╗  ██║
███████╗█████╗  ██║     █████╗  ██║        ██║   ██║   ██║██████╔╝    ███████╗█████╗  ██║        ██║   ██║██║   ██║██╔██╗ ██║
╚════██║██╔══╝  ██║     ██╔══╝  ██║        ██║   ██║   ██║██╔══██╗    ╚════██║██╔══╝  ██║        ██║   ██║██║   ██║██║╚██╗██║
███████║███████╗███████╗███████╗╚██████╗   ██║   ╚██████╔╝██║  ██║    ███████║███████╗╚██████╗   ██║   ██║╚██████╔╝██║ ╚████║
╚══════╝╚══════╝╚══════╝╚══════╝ ╚═════╝   ╚═╝    ╚═════╝ ╚═╝  ╚═╝    ╚══════╝╚══════╝ ╚═════╝   ╚═╝   ╚═╝ ╚═════╝ ╚═╝  ╚═══╝
*/

* {
    font-family: var(--smoothFont);
}
/* ... */

